# SiPANN

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  README.rst  SiP.py  import_nn.py  pyproject.toml  pytest.ini  requirements.txt  ringResonator.py  setup.cfg  setup.py  test.py  tox.ini  waveguide.ipynb
.github/workflows/: continuous-integration-pip-master.yml  continuous-integration-pip.yml  pythonapp.yml  release.yml
GAP_SWEEP_REALS/: model_iter-974.data-00000-of-00001  nn_import.py
RING_EXP/: Import.pkl  model_iter-3.index
SiP-ANN/: SiP.py
SiPANN/: SiP.py  __init__.py  comp.py  cross_coup.py  dc.py  history.py  import_nn.py  interconnect.py  nn.py  scee.py  scee_int.py  scee_opt.py  scee_simp.py
SiPANN/ANN/GAP_SWEEP/: Import.pkl  model.index
SiPANN/ANN/GAP_SWEEP_REALS/: Import.pkl  history.py  model.index
SiPANN/ANN/LUKAS_NN/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/RING_EXP/: Import.pkl  model_iter-3.data-00000-of-00001
SiPANN/ANN/SINGLE_SWEEP/: Import.pkl  model.index
SiPANN/ANN/STRAIGHT_SWEEP/: Import.pkl  model.index
SiPANN/ANN/STRAIGHT_SWEEP_REALS/: Import.pkl  Import_old.pkl  model.index
SiPANN/ANN/TIGHT_ANGLE_BENT/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/TIGHT_ANGLE_BENT_RAND/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/TIGHT_ANGLE_GAP/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/TIGHT_ANGLE_STRAIGHT/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/TIGHT_BENT/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/TIGHT_GAP/: Import.pkl  model.data-00000-of-00001  model.index
SiPANN/ANN/TIGHT_STRAIGHT/: Import.pkl  model.index
SiPANN/COUPLER/: split_100_0.npz  split_10_90.npz  split_20_80.npz  split_30_70.npz  split_40_60.npz  split_50_50.npz
SiPANN/LR/: DC_coeffs.joblib  DC_coeffs.pkl  R_bent.joblib  R_bent.pkl  R_bent_wide.joblib  R_bent_wide.pkl  R_gap.joblib  R_gap0.pkl  R_gap1.pkl  R_straight.joblib  R_straight.pkl  regress.py
SiP_ANN.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
docs/: _config.yml  _toc.yml  index.rst  installing.md  installing.rst
docs/api/: comp.rst  scee.rst  scee_int.rst  scee_opt.rst
docs/changelog/: 1.3.1-changelog.md  1.3.2-changelog.md  1.4.0-changelog.md  2.0.0-changelog.md  2.0.1-changelog.md
docs/source/: comp.rst  conf.py  dc.rst  index.rst  installing.rst  nn.rst  nn_utils.rst  requirements.txt  scee.rst  scee_simp.rst
docs/source/api/: nn.rst  nn_utils.rst  scee.rst  scee_int.rst  scee_opt.rst  scee_simp.rst
docs/source/tutorials/: ExportToInterConnect.rst  HalfRing.rst  InverseDesign.rst  PreMadeCouplers.rst  Simphony.rst  tut_halfring.rst  tut_scee.rst
docs/tutorials/: ExportToInterConnect.ipynb  HalfRing.ipynb  InverseDesign.ipynb  PreMadeCouplers.ipynb  Simphony.ipynb  split_25_75.npz  split_45_55_1530.npz
examples/: Comparison.ipynb  Comparison_bent.ipynb  HalfRing.ipynb  README.md  coupler.ipynb  dc.ipynb  directionalCoupler.ipynb  fitP.py  index.rst  racetrack.py  ringResonator.ipynb  ringResonator.py  simphony.ipynb  test.ipynb  test.mat  tight_bent.npz  waveguide.ipynb
examples/Tutorials/: ExportToInterConnect.ipynb  HalfRing.ipynb  InverseDesign.ipynb  PreMadeCouplers.ipynb  Simphony.ipynb  export_to_rst.py  test_coupler.npz
tests/: test_comp.py  test_import_nn.py  test_nn.py  test_scee.py  test_scee_opt.py
